qualia_derive/tests/compile-fail/only-supported-fixed-field-types.stderr
error: expected integer literal or string literal
 --> $DIR/only-supported-fixed-field-types.rs:5:25
  |
5 | #[fixed_fields("foo" => 4.5)]
  |                         ^^^
